<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/dashed_circle"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="64sp"
        android:fontFamily="sans-serif-light"
        android:text="@string/zero"
        android:id="@+id/circle"
        android:layout_margin="32dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorBackGroundGrey"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/waiting_to_detect"
        android:padding="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorBackGroundGrey"
        android:orientation="horizontal"
        android:id="@+id/mobileLL"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:id="@+id/mobile"
            />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:contentDescription="@string/edit_icon"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorBackGroundGrey"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:background="@drawable/or_background"
            android:text="@string/or"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_margin="16dp"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLength="6"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:id="@+id/otp"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        android:layout_margin="20dp"
        android:text="@string/verify"
        android:id="@+id/verify"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:text="@string/back_to_login"
        android:id="@+id/login"
        />

</LinearLayout>